.apex/unpackaged/objects/redwing__Learning_Category_Account__c.object
<CustomObject>
    <fields>
        <fullName>redwing__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Catalogs</relationshipLabel>
        <relationshipName>Learning_Category_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Enable_Catalog_Training_Activities__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this option if you want to enable all Learning Activities associated to this Catalog for the specified Account</inlineHelpText>
        <label>Enable Catalog Learning Activities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Enable_Catalog_Training_Plans__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this option if you want to enable all Learning Plans associated to this Catalog for the specified Account</inlineHelpText>
        <label>Enable Catalog Learning Plans</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Enable_Catalog_Training_Tracks__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this option if you want to enable all Learning Tracs associated to this Catalog for the specified Account</inlineHelpText>
        <label>Enable Catalog Learning Tracs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Learning_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Catalog</label>
        <referenceTo>redwing__Learning_Category__c</referenceTo>
        <relationshipLabel>Catalog Accounts</relationshipLabel>
        <relationshipName>Learning_Category_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Catalog Account</label>
    <nameField>
        <displayFormat>CAA-{0000000}</displayFormat>
        <label>Catalog Account ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Catalog Accounts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>